Added CSRF to forms, changed Patient model to include birthday and gender with new method age() to compute age depending on birthday, changed forms to include gender and birthday (also added css code for new inputs), refactored JS and view functions to reduce code lines (used only one function for adding or deleting diagnosis in patient and in db (db throws error when using methods to add or delete to db without instantiating a variable idk why), added separate js file for CSRF and textarea, added JS for textarea to auto height upon reload and change, edited HTML to factor in changes in py and js files.

--- a/app/static/scss/_globals.scss
+++ b/app/static/scss/_globals.scss
@@ -13,6 +13,7 @@ body {
     font-family: 'Public Sans', sans-serif;
     font-size: $font-sm;
     line-height: 1.5;
+    color: $verydarkGray;
 
     ::placeholder {
         font-family: 'Public Sans', sans-serif;
@@ -21,9 +22,15 @@ body {
         overflow: hidden;
     }
 }
+
 h1, h2, h3, p {
     margin-top: 0;
     margin-bottom: 0;
+}
+
+ul {
+    font-size: $font-vsm;
+    margin: 0;
 }
 
 a, a:visited, a:hover {
@@ -33,11 +40,13 @@ a, a:visited, a:hover {
 .bg-grey {
     background-image: radial-gradient(circle, $lightGray, $veryLightgray);
 }
+
 // change patientdb card bg to lightgrey
 div.bg-lightgrey {
     background-color: $veryLightgray;
     color: $verydarkGray;
 }
+
 // Spacing
 .container {
     padding-left: 1.5rem;
@@ -58,20 +67,30 @@ div.bg-lightgrey {
     &--pr {
         padding-right: 1.5rem;
     }
+
     &--pl {
         padding-left: 1.5rem;
     }
+
     &--all {
         padding-left: 1.5rem;
         padding-right: 1.5rem;
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
     }
+
     &--wrapper {
         max-width: 40rem;
         margin-left: auto;
         margin-right: auto;
     }
+
+    &--wrapper-lg {
+        max-width: 60rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     &--margin-bottom-sm {
         margin-bottom: 0.5rem;
     }
@@ -82,6 +101,14 @@ div.bg-lightgrey {
 
     &--margin-left {
         margin-left: 0.75rem;
+    }
+
+    &--margin-left-sm {
+        margin-left: 0.25rem;
+    }
+
+    &--margin-top {
+        margin-top: 1.325rem;
     }
 
     &--input-padding {
@@ -129,6 +156,20 @@ div.bg-lightgrey {
     &-auto-height {
         height: auto;
     }
+    &-flex-grow {
+        flex: 1 0 35%;
+        @include breakpoint-down(small){
+            flex: 1 0 50%;
+        }
+    }
+    &-flex-wrap {
+        flex-wrap: wrap;
+    }
+}
+//flex break
+.break {
+    flex-basis: 100%;
+    height: 0;
 }
 
 // visibility
@@ -155,6 +196,9 @@ div.bg-lightgrey {
 }
 
 dd {
+    @include breakpoint-down(medium){
+        margin-left: 0.1rem;
+    }
     margin-left: 1.25rem;
 }
 
@@ -167,6 +211,9 @@ dd {
 }
 
 .justify {
+    @include breakpoint-down(medium){
+        margin-left: 0;
+    }
     margin-left: 1.875rem;
     text-align: justify;
     text-justify: inter-word;
@@ -175,3 +222,8 @@ dd {
 :focus-visible {
     outline:none;
 }
+
+label {
+    font-size: $font-vsm;
+}
+
