--- a/app/templates/main/section_final_diagnosis.html
+++ b/app/templates/main/section_final_diagnosis.html
@@ -1,3 +1,8 @@
+            <ul>
                 {% for d in final_diagnosis %}
-                {{ d }}
+                <li>
+                    {{ d.disease }}
+                </li>
                 {% endfor %}
+
+            </ul>
