--- a/app/static/scss/_index.scss
+++ b/app/static/scss/_index.scss
@@ -87,7 +87,7 @@
         color: $darkBlue;
 
     }
-    input[type=text] {
+    input[type=text], input[type=date], select {
         width: 100%;
         background-color: $lightGray;
         border: 1px solid $lightGray;
@@ -106,7 +106,7 @@
         font-size: $font-vsm;
         font-weight: 300;
         color: $lightGray;
-        background-color: $brightPurple;
+        background-color: $darkBlue;
         border-radius: 2px;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
         transition: all 300ms ease-in-out;
@@ -144,15 +144,15 @@
 }
 
 a.button_links {
-        color: $brightPurple;
+        color: $darkBlue;
         font-size: $font-vsm;
-        border: 1px solid $brightPurple;
+        border: 1px solid $darkBlue;
         border-radius: 2px;
         transition: 300ms ease-in-out;
 
         &:hover {
             color: #fff;
-            background-color: $brightPurple;
+            background-color: $darkBlue;
         }
 
 }
